# budget-tracker

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.agent/workflows/: feature-development.md  pre-commit.md  start-feature.md
.github/workflows/: claude-code-review.yml
backend/: Makefile  README.md  pyproject.toml
backend/app/: db.py  dependencies.py  main.py  model.py  repository.py  services.py
backend/tests/: conftest.py  test_account.py  test_api.py  test_db.py  test_entry.py  test_operations.py  test_repository.py  test_services.py
docs/: README.md  SPECIFICATION.md
src/budget_tracker/: api.py  db.py  model.py  repository.py  schemas.py  services.py
tests/: conftest.py  test_account.py  test_api.py  test_db.py  test_entry.py  test_operations.py  test_repository.py  test_services.py
