[project]
name = "budget-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pytest>=7.4.4", "pytest-sugar>=1.0.0"]


[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]