[project]
name = "budget-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=7.4.4",
    "pytest-sugar>=1.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]


[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
