[project]
name = "app"
version = "0.1.0"
description = "Budget Tracker Backend API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=7.4.4",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]

[tool.ruff]
line-length = 89

[tool.ruff.lint]
extend-select = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.ty]
rules = { invalid-argument-type = "ignore" }
